--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ section {
 }
 
 /*---------footer---------*/
-footer {
+/* footer {
   background-color: #222023;
   background-image: -webkit-linear-gradient(top, #222023, #1e2c47);
   background-image: -moz-linear-gradient(top, #222023, #1e2c47);
@@ -194,7 +194,7 @@ footer hr {
 }
 .footer-bottom {
   margin-top: 30px;
-}
+} */
 .open-hours hr {
   margin: 30px 0;
 }
@@ -223,9 +223,26 @@ p {
   flex-direction: column;
   align-items: center;
   background-color: #6666666b;
-  color: #f1efef;
+  color: #fffdfd3b;
 }
 
-.main p{
-  color: #f1efef;
+.main1 p{
+  color: #fffbfb;
+  height: 400px;
+  width: 500px;
+  font-size: 30px;
+}
+.main1{
+  justify-content:center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #6666666b;
+  color: #f5ecec;
+  width: 100%;
+  height: 500px;
+  
+}
+.main1 h1{
+  font-size: 50px;
 }
